# i9wa4.github.io

./: .deployed-sha  .gitignore  .nojekyll  .pre-commit-config.yaml  404.html  404.md  404.qmd  AGENTS.md  CONTRIBUTING.md  README.md  _config.yml  _quarto.yaml  _quarto.yml  about.html  about.md  about.qmd  blog.md  book.md  cicd.md  default.css  dev.md  docker.md  feed.html  feed.md  feed.qmd  feed.xml  flake.nix  index.html  index.md  index.qmd  index.xml  jekyll.md  listings.json  main.py  mise.toml  pyproject.toml  renovate.json  robots.txt  search.json  sitemap.xml  (+3 more)
.github/: README.md  ghalint.yaml  zizmor.yaml  zizmor.yml
2077/: README.md
_drafts/: 20231216-sapporo.vim.qmd  2024-01-28-docker-kubernetes-introduction.md  2024-04-11-draft-fundamentals-of-data-engineering.md  20240204-sapporo.vim.qmd  date-welcome-to-jekyll.markdown  slides.md
_includes/: anchor-icon-fix.html  auto-color-scheme.html  hatena-nocomment.html  header.html  slides.html  tag.html
_layouts/: post.html
_posts/: 2023-10-03-init.md  2024-01-01-init.md  2024-01-01-jekyll-test.md  2024-01-02-jelyll-adjust.md  2024-01-02-vim-plugin-mnh.md  2024-01-27-setup-efm-langserver.md  2024-01-28-git-tips.md  2024-01-28-looking-for-a-new-job.md  2024-01-28-microsoft-office-tips.md  2024-02-04-chrome-tips.md  2024-02-04-posgresql-tips.md  2024-03-24-retirement.md  2024-03-25-setup-wsl2.md  2024-03-26-setup-ds100knock.md  2024-05-04-get-git-branch-name.vim.md  2024-05-05-deploy-quarto.md
about/: index.qmd
algolia/: README.md
apprentice/: README.md
articles/: 2024-11-20-manage-zenn-with-github.md  (+12 more)
(+1009 files in other folders)
